fix core-ai-cli spotbugs violations